--- a/main/res/values-fr/strings.xml
+++ b/main/res/values-fr/strings.xml
@@ -28,10 +28,10 @@
     <string name="wherigo">Wherigo</string>
     <string name="communceleb">Événement de célébration de la communauté</string>
     <string name="ape">Project ape cache</string>
-    <string name="gchq">Quartier Général (Geocaching HQ)</string>
+    <string name="gchq">Siège de Groundspeak</string>
     <string name="gchqceleb">Fête du Geocaching HQ</string>
     <string name="gps">GPS Adventures Maze Exhibit</string>
-    <string name="block">Geocaching HQ Block Party</string>
+    <string name="block">Fête locale Groundspeak</string>
     <string name="unknown">Type inconnu</string>
     <!-- cache sizes -->
     <string name="cache_size_micro">Micro</string>
@@ -161,11 +161,11 @@
     <string name="err_server_ec">Impossible de contacter Extremcaching.com. Le site web peut ne pas fonctionner ou votre connexion Internet ne fonctionne pas.</string>
     <string name="err_server_su">Impossible d\'accéder à geocaching.su ; le site Web est peut-être indisponible ou votre connexion Internet ne fonctionne pas.</string>
     <string name="err_server_gk">Impossible de contacter GeoKrety.org. Le site Web peut être indisponible ou votre connexion Internet ne fonctionne pas.</string>
-    <string name="err_login">Pas d\'utilisateur ou de mot de passe enregistré</string>
+    <string name="err_login">Aucune compte renseigné</string>
     <string name="err_login_failed_toast">c:geo est en mode hors-ligne et ne peut pas se connecter. Vérifiez votre connexion Internet.</string>
-    <string name="err_unknown">Erreur inconnue. Veuillez consulter notre <a href="https://www.cgeo.org/faq#login-failed">FAQ</a> pour obtenir de l\'aide.</string>
+    <string name="err_unknown">Erreur inconnue</string>
     <string name="err_unknown_address">c:geo n\'a pas réussi à trouver de coordonnées géographiques pour cette adresse</string>
-    <string name="err_comm">Erreur de communication non identifiée. Veuillez consulter notre <a href="https://www.cgeo.org/faq#login-failed">FAQ</a> pour obtenir de l\'aide.</string>
+    <string name="err_comm">Erreur de communication inconnue</string>
     <string name="err_missing_auth">Nom d\'utilisateur ou mot de passe manquant</string>
     <string name="err_wrong">Nom d\'utilisateur ou mot de passe incorrect</string>
     <string name="err_maintenance">Le site de Geocaching.com est en cours de maintenance, essayez plus tard. c:geo fonctionne en mode hors-ligne.</string>
@@ -248,9 +248,6 @@
     <string name="warn_pocket_query_select">Aucune Pocket Query sélectionnée.</string>
     <string name="warn_no_pocket_query_found">Aucune Pocket Query trouvée en ligne.</string>
     <string name="warn_invalid_character">Le caractère doit être une LETTRE ou un CHIFFRE</string>
-    <string name="warn_notloggedin_title">Mode hors-ligne</string>
-    <string name="warn_notloggedin_short">Non connecté. La carte en temps réel ne montrera que les caches stockées localement.</string>
-    <string name="warn_notloggedin_long">Non (encore) connecté. La carte en temps réel n\'affichera que les caches stockées localement et les fonctions en ligne ne fonctionneront pas.\n\nSoit il n\'y a pas de connexion réseau, soit il y a un problème de serveur ou bien vous devez (re)configurer vos services geocaching.\n\nSouhaitez-vous configurer les services maintenant ?</string>
     <string name="err_read_pocket_query_list">Erreur de lecture de la liste des Pocket Queries.</string>
     <string name="info_log_posted">Envoi de la visite réussi.</string>
     <string name="info_log_saved">Enregistrement de la visite réussie.</string>
@@ -276,7 +273,7 @@
     <!-- location service -->
     <string name="loc_last">Dernière position</string>
     <string name="loc_net">Réseau</string>
-    <string name="loc_fused">Fusionné</string>
+    <string name="loc_fused">Unifié</string>
     <string name="loc_low_power">Éco</string>
     <string name="loc_home">Domicile</string>
     <string name="loc_gps">GPS</string>
@@ -357,9 +354,6 @@
     <string name="caches_delete_events">Supprimer les événements précédents</string>
     <string name="caches_upload_modifiedcoords">Envoyer les coordonnées modifiées</string>
     <string name="caches_upload_modifiedcoords_warning">Voulez-vous télécharger les coordonnées modifiées pour toutes les caches (sélectionnées) et écraser les coordonnées existantes sur le serveur ? Cela ne peut pas être annulé.</string>
-    <string name="caches_upload_allcoords">Envoyer les coordonnées de toutes les caches</string>
-    <string name="caches_upload_allcoords_dialogtitle">AVERTISSEMENT - Envoi de toutes les coordonnées</string>
-    <string name="caches_upload_allcoords_warning">Vous allez écraser les coordonnées existantes sur le serveur pour toutes les caches (sélectionnées) de votre liste avec les coordonnées actuellement dans c:geo ! Cette opération ne doit être réalisée que dans des cas particuliers, par exemple lorsque vous avez importé un fichier GPX qui contient des coordonnées corrigées. Cette opération ne peut pas être annulée et vous devez l\'utiliser avec précaution. Habituellement il est préférable d\'utiliser la fonction \"Envoyer les coordonnées modifiées\" disponible dans le même menu.</string>
     <string name="caches_refresh_selected">Rafraîchir la sélection</string>
     <string name="caches_refresh_all">Tout rafraîchir</string>
     <string name="caches_move_selected">Déplacer la sélection</string>
@@ -390,17 +384,12 @@
     <string name="caches_filter_own_rating">Ayant reçu une évaluation de votre part</string>
     <string name="caches_filter_multi_listing">Listing multi-états</string>
     <string name="caches_filter_own_waypoint">Avec points de passage définis par l’utilisateur</string>
-    <string name="caches_filter_missing_gcvote">Caches trouvées et sans vote</string>
-    <string name="caches_filter_lists">Assigné à une liste</string>
     <string name="caches_removing_from_history">Suppression de l\'historique…</string>
     <string name="caches_clear_offlinelogs">Supprimer les visites hors-ligne</string>
     <string name="caches_clear_offlinelogs_message">Supprimer toutes les visites hors-ligne ?</string>
     <string name="caches_clear_offlinelogs_progress">Suppression des visites hors-ligne</string>
     <string name="caches_make_list_unique">Rendre la liste unique</string>
-    <string name="caches_set_listmarker">Set list marker</string>
-    <string name="caches_listmarker_none">No marker</string>
-    <string name="caches_listmarker_marker">Marker %d</string>
-    <string name="caches_listmarker_selected">(sélectionné)</string>
+    <string name="caches_filter_missing_gcvote">Caches trouvées et sans vote</string>
     <!-- caches lists -->
     <string name="menu_lists">Gérer les listes</string>
     <string name="list_menu_create">Nouvelle liste</string>
@@ -607,7 +596,6 @@
     <string name="init_summary_log_offline">Toujours utiliser le mode hors-ligne pour les visites (même si vous êtes connectés vos visites ne seront pas envoyées automatiquement)</string>
     <string name="init_choose_list">Demander la liste</string>
     <string name="init_summary_choose_list">Demander dans quelle liste enregistrer les caches</string>
-    <string name="init_listdisplay">Afficher les listes supplémentaires dans la liste des caches</string>
     <string name="init_livelist">Afficher la direction des caches dans les listes</string>
     <string name="init_summary_livelist">Afficher la direction des caches dans les listes</string>
     <!-- backup / restore -->
@@ -623,7 +611,6 @@
     <string name="backup_confirm_overwrite">Voulez-vous remplacer la sauvegarde existante de %s ?</string>
     <string name="restore_confirm_overwrite">Voulez vous remplacer %s sur votre appareil par la sauvegarde ?</string>
     <string name="init_restore_success">Restauration terminée.</string>
-    <string name="init_restore_failed_dbrecreated">Échec de la restauration : fichier de sauvegarde corrompu, la base de données a dû être recréée.</string>
     <string name="init_restore_failed">Échec de la restauration.</string>
     <string name="init_restore_running">Restauration de la base de données des caches…</string>
     <string name="init_restore_confirm">La base de données est vide. Voulez-vous restaurer la copie de sauvegarde ?</string>
@@ -636,7 +623,7 @@
     <string name="init_backup_settings_backup_full">Paramètres de sauvegarde (complet)</string>
     <string name="init_backup_settings_backup_full_confirm">Voulez-vous stocker des données sensibles liées au compte ? Elles peuvent être lisibles par d\'autres applications.</string>
     <string name="settings_savingerror">Erreur lors de l\'enregistrement des paramètres</string>
-    <string name="settings_saved">Paramètres enregistrés avec succès dans :</string>
+    <string name="settings_saved">Paramètres enregistrés</string>
     <string name="init_backup_settings_restore">Restaurer les paramètres</string>
     <string name="init_backup_settings_restore_confirm">Voulez-vous écraser vos paramètres actuels ?</string>
     <string name="init_backup_settings_restore_no">Il n\'y a pas de sauvegarde des paramètres disponible</string>
@@ -954,7 +941,6 @@
     <string name="ignore_confirm_title">Soyez prudent</string>
     <string name="ignore_confirm_message">Ignorer une cache signifie que cette cache n\'apparaîtra plus lors du chargement de données depuis geocaching.com. Pour voir à nouveau cette cache : réactivez-la sur le site Web.</string>
     <string name="cache_status">Statut</string>
-    <string name="cache_stored">Enregistrées</string>
     <string name="cache_status_offline_log">Visite enregistrée hors-ligne</string>
     <string name="cache_status_found">Trouvée</string>
     <string name="cache_not_status_found">Non trouvée</string>
@@ -966,14 +952,6 @@
     <string name="cache_status_not_premium">Pour tous les membres</string>
     <string name="cache_status_stored">Enregistrée</string>
     <string name="cache_status_not_stored">Non enregistrée</string>
-    <string name="cache_status_stored_lasteighthours">Within last eight hours</string>
-    <string name="cache_status_stored_lasttwentyfourhours">Within last twenty-four hours</string>
-    <string name="cache_status_stored_lastsevendays">Within last seven days</string>
-    <string name="cache_status_stored_lastthirtydays">Within last thirty days</string>
-    <string name="cache_status_stored_morethaneighthours">Before last eight hours</string>
-    <string name="cache_status_stored_morethantwentyfourhours">Before last twenty-four hours</string>
-    <string name="cache_status_stored_morethansevendays">Before last seven days</string>
-    <string name="cache_status_stored_morethanthirtydays">Before last thirty days</string>
     <string name="cache_geocode">Géocode</string>
     <string name="cache_name">Nom</string>
     <string name="cache_type">Type</string>
@@ -1068,8 +1046,6 @@
     <string name="waypoint_note">Note</string>
     <string name="waypoint_user_note">Note de l\'utilisateur</string>
     <string name="waypoint_visited">Marquer comme visité</string>
-    <string name="waypoint_set_visited">Étape marquée comme visitée</string>
-    <string name="waypoint_unset_visited">Étape marquée comme non visitée</string>
     <string name="waypoint_save">Enregistrer</string>
     <string name="waypoint_cancel_edit">Annuler</string>
     <string name="waypoint_loading">Chargement d\'une étape…</string>
@@ -1518,7 +1494,7 @@
     <string name="status_new_rc" tools:ignore="UnusedResources">Une nouvelle version candidate est disponible.\nAppuyez ici pour l\'installer.</string>
     <string name="status_geocaching_change" tools:ignore="UnusedResources">Des changements récents sur Geocaching.com ont cassé c:geo.\nNous sommes en train de corriger. Revenez plus tard.</string>
     <string name="status_geocaching_livemap" tools:ignore="UnusedResources">Des changements récents sur Geocaching.com ont cassé la carte temps-réel.\nNous sommes en train de corriger. Revenez plus tard.</string>
-    <string name="status_geocaching_maintenance" tools:ignore="UnusedResources">Maintenant en cours sur geocaching.com.\nIl se peut que vous rencontriez des problèmes.</string>
+    <string name="status_geocaching_maintenance" tools:ignore="UnusedResources">Maintenance en cours sur geocaching.com.\nIl se peut que vous rencontriez des problèmes.</string>
     <string name="status_closeout_warning_41" tools:ignore="UnusedResources">Votre version d\'Android semble antérieure à 4.1. Les prochaines versions de c:geo pourraient ne plus fonctionner sur votre appareil.</string>
     <!-- text-to-speech for compass view -->
     <string name="tts_service">Boussole parlante</string>
@@ -1641,14 +1617,8 @@
     <string name="ask_again">Demander plus tard</string>
     <string name="location_permission_request_explanation">c:geo a besoin d\'accéder au GPS de votre appareil pour identifier votre position et calculer la distance et la direction des géocaches. Il ne peut être utilisé sans cette permission.</string>
     <string name="storage_permission_request_explanation">c:geo écrira des données sur votre carte SD ou votre téléphone dès que vous sauvegarderez des géocaches pour une utilisation hors-ligne. En outre c:geo utilisera le stockage de votre téléphone pour importer et exporter des fichiers et lire des cartes hors-ligne. Il ne peut être utilisé sans cette autorisation.</string>
-    <string name="storage_permission_needed">Cette fonction n\'est disponible qu\'après avoir autorisé l\'accès au stockage.</string>
     <!-- colors -->
     <string name="color_blue">Bleu</string>
     <string name="color_green">Vert</string>
     <string name="color_grey">Gris</string>
-    <!-- number input -->
-    <string name="number_input_title">Saisissez une valeur entre %1$s et %2$s</string>
-    <string name="number_input_err_boundarymin">La valeur saisie est trop faible - réinitialisée à la valeur minimale</string>
-    <string name="number_input_err_boundarymax">La valeur saisie est trop grande - réinitialisée à la valeur maximale</string>
-    <string name="number_input_err_format">Format de nombre non valide</string>
 </resources>
