--- a/main/res/values-sv/strings.xml
+++ b/main/res/values-sv/strings.xml
@@ -28,10 +28,10 @@
     <string name="wherigo">Wherigo cache</string>
     <string name="communceleb">Community Celebration Event</string>
     <string name="ape">Projekt APE cache</string>
-    <string name="gchq">Geocaching HQ</string>
+    <string name="gchq">Groundspeak HQ</string>
     <string name="gchqceleb">Geocaching HQ Celebration</string>
     <string name="gps">GPS adventures utställning</string>
-    <string name="block">Geocaching HQ Block Party</string>
+    <string name="block">Groundspeak Gatufest</string>
     <string name="unknown">Okänd typ</string>
     <!-- cache sizes -->
     <string name="cache_size_micro">micro</string>
@@ -163,9 +163,9 @@
     <string name="err_server_gk">Det gick inte att kontakta GeoKrety.org. Webbplatsen kan vara nere eller så fungerar inte din internet-anslutning.</string>
     <string name="err_login">Inloggningsinformationen ej sparad</string>
     <string name="err_login_failed_toast">Tyvärr kan c:geo inte logga in. c:geo kommer att köra i offline läge med sparade cacher. Kontrollera dina inloggningsuppgifter och aktivera din internetanslutning.</string>
-    <string name="err_unknown">Unknown error. Please refer to our <a href="https://www.cgeo.org/faq#login-failed">FAQ</a> for guidance.</string>
+    <string name="err_unknown">Okänt fel</string>
     <string name="err_unknown_address">c:geo kunde inte associera adressen till en plats</string>
-    <string name="err_comm">Unknown communication error. Please refer to our <a href="https://www.cgeo.org/faq#login-failed">FAQ</a> for guidance.</string>
+    <string name="err_comm">Okänt kommunikationsfel</string>
     <string name="err_missing_auth">Användarnamn och/eller lösenord saknas</string>
     <string name="err_wrong">Fel användarnamn och/eller lösenord</string>
     <string name="err_maintenance">Arbete pågår med servern Geocaching.com. c:geo fungerar under tiden i offline läge med sparade cacher.</string>
@@ -248,9 +248,6 @@
     <string name="warn_pocket_query_select">Ingen Pocket query vald.</string>
     <string name="warn_no_pocket_query_found">Ingen Pocket query hittades på nätet.</string>
     <string name="warn_invalid_character">Tecknet måste vara en bokstav eller en siffra</string>
-    <string name="warn_notloggedin_title">Offline mode</string>
-    <string name="warn_notloggedin_short">Not logged in. Live map will only show caches stored locally.</string>
-    <string name="warn_notloggedin_long">Not logged in (yet). Live map will only show caches stored locally and online functions will not work.\n\nEither there is no network connection, a server problem or you have to (re)configure your geocaching services.\n\nDo you want to configure services now?</string>
     <string name="err_read_pocket_query_list">Fel vid inläsning av Pocket Query-lista.</string>
     <string name="info_log_posted">c:geo har postat din logg.</string>
     <string name="info_log_saved">c:geo har sparat din logg.</string>
@@ -357,9 +354,6 @@
     <string name="caches_delete_events">Ta bort gamla event</string>
     <string name="caches_upload_modifiedcoords">Upload modified coordinates</string>
     <string name="caches_upload_modifiedcoords_warning">Do you want to upload modified coordinates for all (selected) caches and overwrite the existing coordinates on the server? This cannot be undone.</string>
-    <string name="caches_upload_allcoords">Upload coordinates for all caches</string>
-    <string name="caches_upload_allcoords_dialogtitle">WARNING - Uploading all coordinates</string>
-    <string name="caches_upload_allcoords_warning">This will overwrite the existing coordinates on the server for all (selected) caches of your list with the current listing coordinates in c:geo! This is to be used only in special cases, e. g. when you imported a GPX file which contains corrected coordinates as listing coordinates. This cannot be undone and you should only use it, if you know what you are doing. In normal cases you might rather want to use the function \"Upload modified coordinates\" in the same menu.</string>
     <string name="caches_refresh_selected">Uppdatera valda</string>
     <string name="caches_refresh_all">Uppdatera alla</string>
     <string name="caches_move_selected">Flytta valda</string>
@@ -390,17 +384,12 @@
     <string name="caches_filter_own_rating">Med eget betyg</string>
     <string name="caches_filter_multi_listing">Listade på flera sajter men inte loggad på alla</string>
     <string name="caches_filter_own_waypoint">Med egna punkter</string>
-    <string name="caches_filter_missing_gcvote">Hittade cacher utan röster</string>
-    <string name="caches_filter_lists">Assigned to a list</string>
     <string name="caches_removing_from_history">Tar bort från historik…</string>
     <string name="caches_clear_offlinelogs">Rensa offline loggar</string>
     <string name="caches_clear_offlinelogs_message">Vill du rensa offline loggarna?</string>
     <string name="caches_clear_offlinelogs_progress">Rensar offline loggar</string>
     <string name="caches_make_list_unique">Gör listan unik</string>
-    <string name="caches_set_listmarker">Set list marker</string>
-    <string name="caches_listmarker_none">No marker</string>
-    <string name="caches_listmarker_marker">Marker %d</string>
-    <string name="caches_listmarker_selected">(selected)</string>
+    <string name="caches_filter_missing_gcvote">Hittade cacher utan röster</string>
     <!-- caches lists -->
     <string name="menu_lists">Hantera listor</string>
     <string name="list_menu_create">Skapa en ny lista</string>
@@ -607,7 +596,6 @@
     <string name="init_summary_log_offline">Spara bara loggen lokalt (visa inte loggningfönster och skicka inte loggen till gc.com)</string>
     <string name="init_choose_list">Listhantering</string>
     <string name="init_summary_choose_list">Fråga efter lista när cacher sparas</string>
-    <string name="init_listdisplay">Show additional lists in cache list</string>
     <string name="init_livelist">Riktning</string>
     <string name="init_summary_livelist">Visa riktning till cacher i listan</string>
     <!-- backup / restore -->
@@ -623,7 +611,6 @@
     <string name="backup_confirm_overwrite">Vill du skriva över den befintliga säkerhetskopian från %s?</string>
     <string name="restore_confirm_overwrite">Vill du skriva över %s på enheten med säkerhetskopian?</string>
     <string name="init_restore_success">Återställning klar.</string>
-    <string name="init_restore_failed_dbrecreated">Restoration failed: Backup file corrupt, database had to be recreated.</string>
     <string name="init_restore_failed">Återställningen misslyckades.</string>
     <string name="init_restore_running">Återställer databasen med cacher…</string>
     <string name="init_restore_confirm">Databasen är tom. Vill du återställa med säkerhetskopian du gjort tidigare?</string>
@@ -636,7 +623,7 @@
     <string name="init_backup_settings_backup_full">Backup settings (full)</string>
     <string name="init_backup_settings_backup_full_confirm">Do you want to store sensitive account related data? Those may be readable by other applications.</string>
     <string name="settings_savingerror">Error saving settings</string>
-    <string name="settings_saved">Settings successfully saved to:</string>
+    <string name="settings_saved">Settings saved</string>
     <string name="init_backup_settings_restore">Restore settings</string>
     <string name="init_backup_settings_restore_confirm">Do you want to overwrite your current settings?</string>
     <string name="init_backup_settings_restore_no">There is no settings backup available</string>
@@ -766,7 +753,7 @@
     <string name="auth_authorize">Koppla c:geo mot Twitter</string>
     <string name="auth_check">Kolla autentisering</string>
     <string name="auth_check_again">Kolla autentisering igen</string>
-    <string name="auth_start">Påbörja koppling mot Twitter</string>
+    <string name="auth_start">Kolla autentisering</string>
     <string name="auth_again">Koppla mot Twitter igen</string>
     <string name="auth_register">Skapa ett konto</string>
     <string name="auth_connected">Ansluten</string>
@@ -954,7 +941,6 @@
     <string name="ignore_confirm_title">Var försiktig</string>
     <string name="ignore_confirm_message">Genom att ignorera en cache så kommer den aldrig mer visas när data laddas ned från geocaching.com. Det enda sätt att visa den igen är genom att ändra inställningar på cachens webbsida.</string>
     <string name="cache_status">Status</string>
-    <string name="cache_stored">Sparade</string>
     <string name="cache_status_offline_log">Sparad logg</string>
     <string name="cache_status_found">Hittad</string>
     <string name="cache_not_status_found">Ej hittad</string>
@@ -966,14 +952,6 @@
     <string name="cache_status_not_premium">Tillgänglig för alla medlemmar</string>
     <string name="cache_status_stored">Sparad</string>
     <string name="cache_status_not_stored">Ej sparad</string>
-    <string name="cache_status_stored_lasteighthours">Within last eight hours</string>
-    <string name="cache_status_stored_lasttwentyfourhours">Within last twenty-four hours</string>
-    <string name="cache_status_stored_lastsevendays">Within last seven days</string>
-    <string name="cache_status_stored_lastthirtydays">Within last thirty days</string>
-    <string name="cache_status_stored_morethaneighthours">Before last eight hours</string>
-    <string name="cache_status_stored_morethantwentyfourhours">Before last twenty-four hours</string>
-    <string name="cache_status_stored_morethansevendays">Before last seven days</string>
-    <string name="cache_status_stored_morethanthirtydays">Before last thirty days</string>
     <string name="cache_geocode">GC-kod</string>
     <string name="cache_name">Namn</string>
     <string name="cache_type">Typ</string>
@@ -1068,8 +1046,6 @@
     <string name="waypoint_note">Kommentar</string>
     <string name="waypoint_user_note">Personlig anteckning</string>
     <string name="waypoint_visited">Besökt</string>
-    <string name="waypoint_set_visited">Waypoint set to visited</string>
-    <string name="waypoint_unset_visited">Waypoint set to not visited</string>
     <string name="waypoint_save">Spara</string>
     <string name="waypoint_cancel_edit">Avbryt</string>
     <string name="waypoint_loading">Laddar punkt…</string>
@@ -1641,14 +1617,8 @@
     <string name="ask_again">Ask me again</string>
     <string name="location_permission_request_explanation">c:geo needs access to the GPS on your device to locate your position and calculate distance and direction to geocaches. It cannot be used without this permission.</string>
     <string name="storage_permission_request_explanation">c:geo will write data onto your phone storage or SD card as soon as you save geocaches for offline use. Furthermore c:geo will use your phone storage for import and export of files and reading of offline maps. It cannot be used without this permission.</string>
-    <string name="storage_permission_needed">This function is not possible without storage permission.</string>
     <!-- colors -->
     <string name="color_blue">Blue</string>
     <string name="color_green">Green</string>
     <string name="color_grey">Grey</string>
-    <!-- number input -->
-    <string name="number_input_title">Enter a value between %1$s and %2$s</string>
-    <string name="number_input_err_boundarymin">Entered value is too small - reset to min value</string>
-    <string name="number_input_err_boundarymax">Entered value is too large - reset to max value</string>
-    <string name="number_input_err_format">Invalid number format</string>
 </resources>
